# docker_cellar

./: .gitignore  Docker Commands.md  Docker Notes(Turkish) from Gökhan Şengün.md  Docker Sources.md  README.md  docs.md
1 - Basic_App/: Dockerfile
1 - Basic_App/app/data/param/: parameters.json
1-Basic_App/: Dockerfile  README.md  pyproject.toml
1-Basic_App/app/: run.py
2-API/: Dockerfile  README.md  commands.md  pyproject.toml  requirements.txt  upload_image.py
2-API/app/: api.py  convert_func.py  req.txt
2-With_API/: api.py
3-ML_Pipeline/: README.md  docker-compose.yml
3-ML_Pipeline/api/: Dockerfile  pyproject.toml
3-ML_Pipeline/api/src/: main.py  models.py  utils.py
3-ML_Pipeline/frontend/: index.html
3-ML_Pipeline/monitoring/: prometheus.yml
4-Compose/: docker-compose commands.md  docker-compose.yml
4-ONNX_Server/: Dockerfile  README.md  create_model.py  example_usage.ipynb  pyproject.toml
4-ONNX_Server/app/: main.py
4-Tensorflow_Server/: basic_example_guide.txt  fashion_mnist_example.ipynb
4-Tensorflow_Server/model/01/: saved_model.pb
4-Tensorflow_Server/model/01/variables/: variables.data-00000-of-00001  variables.index
5-PostgreSQL_and_pgAdmin/: .env.example  docker-compose.yml
5-PostgreSQL_and_pgAdmin/init-scripts/: 01-init-database.sql
