[project]
name = "onnx-model-server"
version = "0.1.0"
description = "ONNX Runtime model serving with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "onnx>=1.15.0",
    "skl2onnx>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
target-version = ['py311']
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true